Do not follow global timebox picker when bucketing by release

--- a/deploy/App-uncompressed.html
+++ b/deploy/App-uncompressed.html
@@ -315,11 +315,15 @@
     },
 
     _getChartSort: function() {
-        if (this.getSetting('bucketBy') === 'release') {
+        if (this._isByRelease()) {
             return [{ property: 'Release.ReleaseDate', direction: 'ASC' }];
         } else {
             return [{ property: 'ActualEndDate', direction: 'ASC' }];
         }
+    },
+
+    _isByRelease: function() {
+        return this.getSetting('bucketBy') === 'release';
     },
 
     _getFilters: function() {
@@ -329,16 +333,16 @@
             value: null
         }];
 
-        if (this.getSetting('bucketBy') === 'release') {
+        if (this._isByRelease()) {
             queries.push({
                 property: 'Release',
                 operator: '!=',
-                vaue: null
+                value: null
             });
         }
 
         var timeboxScope = this.getContext().getTimeboxScope();
-        if (timeboxScope && timeboxScope.isApplicable(this.model)) {
+        if (timeboxScope && timeboxScope.isApplicable(this.model) && !this._isByRelease()) {
             queries.push(timeboxScope.getQueryFilter());
         }
         if (this.getSetting('query')) {
