Load lowest level pi by default

--- a/deploy/App-uncompressed.html
+++ b/deploy/App-uncompressed.html
@@ -110,14 +110,35 @@
     config: {
         defaultSettings: {
             bucketBy: 'quarter',
-            piType: 'portfolioitem/feature',
+            piType: '',
             query: ''
         }
     },
 
     launch: function() {
+        if (this.getSetting('piType')) {
+            this._loadPIModel(this.getSetting('piType'));
+        } else {
+            Ext.create('Rally.data.wsapi.Store', {
+                model: 'TypeDefinition',
+                sorters: [{ property: 'Ordinal' }],
+                fetch: ['DisplayName', 'TypePath'],
+                filters: [
+                    { property: 'Parent.Name', value: 'Portfolio Item' },
+                    { property: 'Creatable', value: true }
+                ]
+            }).load().then({
+                success: function(records) {
+                    this._loadPIModel(records[0].get('TypePath'));
+                },
+                scope: this
+            });
+        }
+    },
+
+    _loadPIModel: function(piType) {
         Rally.data.wsapi.ModelFactory.getModel({
-            type: this.getSetting('piType'),
+            type: piType,
         }).then({
             success: function(model) {
                 this.model = model;
@@ -125,7 +146,7 @@
             },
             failure: function() {
                 Rally.ui.notify.Notifier.showError({ message: 'Unable to load model type "' + 
-                    this.getSetting('piType') + '". Please verify the settings are configured correctly.' });
+                    piType + '". Please verify the settings are configured correctly.' });
             },
             scope: this
         });
@@ -355,7 +376,8 @@
 
             Rally.launchApp('PICycleTimeChartApp', {
                 name:"PI Cycle Time Chart",
-	            parentRepos:""
+                parentRepos:"",
+                version:"1.0.9"
             });
 
         });
