--- a/deploy/App-uncompressed.html
+++ b/deploy/App-uncompressed.html
@@ -2,7 +2,9 @@
 <html>
 <head>
     <title>PI Cycle Time Chart</title>
-
+    <!--  (c) 2020 Custom Agile.  All Rights Reserved. -->
+    <!--  Build Date: Wed Feb 05 2020 19:47:19 GMT+0100 (Central European Standard Time) -->
+    <!--  Version: "1.0.10"-->
     <script type="text/javascript" src="/apps/2.1/sdk.js"></script>
 
     <script type="text/javascript">
@@ -115,7 +117,7 @@
         }
     },
 
-    launch: function() {
+    launch: function () {
         if (this.getSetting('piType')) {
             this._loadPIModel(this.getSetting('piType'));
         } else {
@@ -128,7 +130,7 @@
                     { property: 'Creatable', value: true }
                 ]
             }).load().then({
-                success: function(records) {
+                success: function (records) {
                     this._loadPIModel(records[0].get('TypePath'));
                 },
                 scope: this
@@ -136,23 +138,25 @@
         }
     },
 
-    _loadPIModel: function(piType) {
+    _loadPIModel: function (piType) {
         Rally.data.wsapi.ModelFactory.getModel({
             type: piType,
         }).then({
-            success: function(model) {
+            success: function (model) {
                 this.model = model;
                 this._addChart();
             },
-            failure: function() {
-                Rally.ui.notify.Notifier.showError({ message: 'Unable to load model type "' + 
-                    piType + '". Please verify the settings are configured correctly.' });
+            failure: function () {
+                Rally.ui.notify.Notifier.showError({
+                    message: 'Unable to load model type "' +
+                        piType + '". Please verify the settings are configured correctly.'
+                });
             },
             scope: this
         });
     },
 
-    getSettingsFields: function() {
+    getSettingsFields: function () {
         return [
             {
                 name: 'piType',
@@ -163,7 +167,7 @@
                 autoSelect: false,
                 validateOnChange: false,
                 validateOnBlur: false,
-                fieldLabel: 'Type', 
+                fieldLabel: 'Type',
                 shouldRespondToScopeChange: true,
                 storeConfig: {
                     model: 'TypeDefinition',
@@ -184,7 +188,7 @@
                         combo.fireEvent('typeselected', combo.getValue(), combo.context);
                     },
                     ready: function (combo) {
-                      combo.fireEvent('typeselected', combo.getValue(), combo.context);
+                        combo.fireEvent('typeselected', combo.getValue(), combo.context);
                     }
                 },
                 bubbleEvents: ['typeselected'],
@@ -216,10 +220,10 @@
                 lastQuery: '',
                 handlesEvents: {
                     typeselected: function (type) {
-                         Rally.data.ModelFactory.getModel({
+                        Rally.data.ModelFactory.getModel({
                             type: type,
-                            success: function(model) {
-                                this.store.filterBy(function(record) {
+                            success: function (model) {
+                                this.store.filterBy(function (record) {
                                     return record.get('value') !== 'release' ||
                                         model.typeDefinition.Ordinal === 0;
                                 });
@@ -238,16 +242,16 @@
         ];
     },
 
-    _addChart: function() {
+    _addChart: function () {
         var context = this.getContext(),
-            whiteListFields = ['Milestones', 'Tags'],
+            whiteListFields = ['Milestones', 'Tags', 'c_EnterpriseApprovalEA'],
             modelNames = [this.model.typePath],
             gridBoardConfig = {
                 xtype: 'rallygridboard',
                 toggleState: 'chart',
                 chartConfig: this._getChartConfig(),
                 plugins: [{
-                    ptype:'rallygridboardinlinefiltercontrol',
+                    ptype: 'rallygridboardinlinefiltercontrol',
                     showInChartMode: true,
                     inlineFilterButtonConfig: {
                         stateful: true,
@@ -258,16 +262,16 @@
                             quickFilterPanelConfig: {
                                 defaultFields: [],
                                 addQuickFilterConfig: {
-                                   whiteListFields: whiteListFields
+                                    whiteListFields: whiteListFields
                                 }
                             },
                             advancedFilterPanelConfig: {
-                               advancedFilterRowsConfig: {
-                                   propertyFieldConfig: {
-                                       whiteListFields: whiteListFields
-                                   }
-                               }
-                           }
+                                advancedFilterRowsConfig: {
+                                    propertyFieldConfig: {
+                                        whiteListFields: whiteListFields
+                                    }
+                                }
+                            }
                         }
                     }
                 }],
@@ -275,13 +279,19 @@
                 modelNames: modelNames,
                 storeConfig: {
                     filters: this._getFilters()
+                },
+                listeners: {
+                    scope: this,
+                    afterrender: function () {
+                        this.addExportButton();
+                    }
                 }
             };
 
         this.add(gridBoardConfig);
     },
 
-    _getChartConfig: function() {
+    _getChartConfig: function () {
         return {
             xtype: 'rallychart',
             chartColors: ['#937bb7'],
@@ -321,7 +331,7 @@
         };
     },
 
-    onTimeboxScopeChange: function() {
+    onTimeboxScopeChange: function () {
         this.callParent(arguments);
 
         var gridBoard = this.down('rallygridboard');
@@ -331,11 +341,11 @@
         this._addChart();
     },
 
-    _getChartFetch: function() {
+    _getChartFetch: function () {
         return ['ActualStartDate', 'ActualEndDate', 'Release'];
     },
 
-    _getChartSort: function() {
+    _getChartSort: function () {
         if (this._isByRelease()) {
             return [{ property: 'Release.ReleaseDate', direction: 'ASC' }];
         } else {
@@ -343,11 +353,11 @@
         }
     },
 
-    _isByRelease: function() {
+    _isByRelease: function () {
         return this.getSetting('bucketBy') === 'release';
     },
 
-    _getFilters: function() {
+    _getFilters: function () {
         var queries = [{
             property: 'ActualEndDate',
             operator: '!=',
@@ -370,14 +380,66 @@
             queries.push(Rally.data.QueryFilter.fromQueryString(this.getSetting('query')));
         }
         return queries;
-    }
+    },
+
+    addExportButton: function () {
+        let ct = this.down('rallyleftright');
+        if (ct && ct.getRight()) {
+            ct.getRight().add({
+                xtype: 'rallybutton',
+                iconCls: 'icon-export',
+                cls: 'rly-small secondary',
+                handler: this._export,
+                margin: '0 20 7 0',
+                scope: this,
+                toolTipText: 'Export...'
+            });
+        }
+    },
+
+    _export: function () {
+        var chart = this.down('rallychart');
+        if (!chart) {
+            Rally.ui.notify.Notifier.showError({ message: "No chart data to export." });
+            return;
+        }
+
+        var data = chart && chart.getChartData();
+        if (!data) {
+            Rally.ui.notify.Notifier.showError({ message: "No chart data to export." });
+            return;
+        }
+
+        var csv = [];
+        var bucket = this.getSetting('bucketBy');
+        var workitems = _.pluck(data.series, 'name');
+        var headers = [bucket].concat(workitems);
+
+        csv.push(headers.join(','));
+        for (var i = 0; i < data.categories.length; i++) {
+            row = [data.categories[i]];
+            row.push(data.series[0].data[i][1]);
+            if (data.series[1].data[i].length) {
+                row.push(`${data.series[1].data[i][0]} - ${data.series[1].data[i][1]}`);
+            }
+            else {
+                row.push('N/A');
+            }
+            csv.push(row.join(','));
+        }
+
+        csv = csv.join('\r\n');
+        var fileName = `cycle-time-${Rally.util.DateTime.format(new Date(), 'Y-m-d-h-i-s')}.csv`;
+        CATS.workitemThroughput.utils.Toolbox.saveAs(csv, fileName);
+    },
 });
 
+                Ext.define("CATS.workitemThroughput.utils.Toolbox", { singleton: !0, saveCSVToFile: function (a, b, c) { void 0 === c && (c = { type: "text/csv;charset=utf-8" }), this.saveAs(a, b, c) }, saveAs: function (a, b) { if (Ext.isIE9m) return void Rally.ui.notify.Notifier.showWarning({ message: "Export is not supported for IE9 and below." }); var c = null; try { c = new Blob([a], { type: "text/plain" }) } catch (d) { window.BlobBuilder = window.BlobBuilder || window.WebKitBlobBuilder || window.MozBlobBuilder || window.MSBlobBuilder, window.BlobBuilder && "TypeError" == d.name && (bb = new BlobBuilder, bb.append([a]), c = bb.getBlob("text/plain")) } if (!c) return void Rally.ui.notify.Notifier.showWarning({ message: "Export is not supported for this browser." }); var e = b; if (Ext.isIE10p) return void window.navigator.msSaveOrOpenBlob(c, e); var f = this.createObjectURL(c); if (f) { var g = document.createElement("a"); "download" in g ? g.download = e : g.target = "_blank", g.innerHTML = "Download File", g.href = f, Ext.isChrome || (g.onclick = this.destroyClickedElement, g.style.display = "none", document.body.appendChild(g)), g.click() } else Rally.ui.notify.Notifier.showError({ message: "Export is not supported " }) }, createObjectURL: function (a) { return window.webkitURL ? window.webkitURL.createObjectURL(a) : window.URL && window.URL.createObjectURL ? window.URL.createObjectURL(a) : null }, destroyClickedElement: function (a) { document.body.removeChild(a.target) } })
 
             Rally.launchApp('PICycleTimeChartApp', {
                 name:"PI Cycle Time Chart",
                 parentRepos:"",
-                version:"1.0.9"
+                version:"1.0.10"
             });
 
         });
